--- a/payouts.ipynb
+++ b/payouts.ipynb
@@ -110,6 +110,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# export concatenated DataFrame to csv\n",
+    "joined.to_csv('joined-settlements.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": false
@@ -531,19 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "house = joined[joined[\"Defendant Agency Name\"] == \"House of Representatives\"]\n",
-    "vets = joined[joined[\"Defendant Agency Name\"] == \"Department of Veterans Affairs\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -634,12 +634,13 @@
        "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "house = joined[joined[\"Defendant Agency Name\"] == \"House of Representatives\"]\n",
     "house"
    ]
   },
@@ -653,115 +654,6 @@
    "source": [
     "DEA = joined[joined[\"Defendant Agency Name\"] == \"Drug Enforcement Adm\"]\n",
     "DEA_payments = DEA[\"Payment Amount\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 322,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "cannot convert float NaN to integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-322-0aef7e87be01>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfixed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mpayment\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mDEA_payments\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mpayment\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpayment\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mfixed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpayment\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot convert float NaN to integer"
-     ]
-    }
-   ],
-   "source": [
-    "fixed = []\n",
-    "for payment in DEA_payments:\n",
-    "    payment = int(payment)\n",
-    "    fixed.append(payment)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 314,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "705      475000\n",
-       "719      200000\n",
-       "746      126280\n",
-       "794        5000\n",
-       "804        5000\n",
-       "835       12500\n",
-       "886        9800\n",
-       "940       50000\n",
-       "943       86850\n",
-       "1030     100000\n",
-       "1032      10000\n",
-       "1033     475000\n",
-       "1042      32500\n",
-       "1070     125000\n",
-       "1081     100000\n",
-       "1160      19846\n",
-       "1241     215000\n",
-       "1245      18000\n",
-       "1313     250000\n",
-       "1351       7100\n",
-       "1377     310000\n",
-       "1400    14294.5\n",
-       "1492      41900\n",
-       "1557     355550\n",
-       "1564    5253.64\n",
-       "1573     200000\n",
-       "1588      80000\n",
-       "1593     100900\n",
-       "1623      25000\n",
-       "1660     130000\n",
-       "         ...   \n",
-       "5544       6000\n",
-       "5545    2544.38\n",
-       "5546    4111.05\n",
-       "5547       8300\n",
-       "5566    3956.27\n",
-       "5567      50000\n",
-       "5598    24702.7\n",
-       "5599    5011.08\n",
-       "5601       7500\n",
-       "6164    3834.93\n",
-       "6221       3400\n",
-       "6222       2680\n",
-       "6223       2585\n",
-       "6224       3800\n",
-       "6225    7098.41\n",
-       "6226       2650\n",
-       "6227    2545.78\n",
-       "6246       4150\n",
-       "6250     2648.4\n",
-       "6276    5335.67\n",
-       "6278    6982.93\n",
-       "6290    3178.47\n",
-       "6292    4269.09\n",
-       "6304     5511.2\n",
-       "6463    5892.47\n",
-       "6464       4539\n",
-       "6467    4540.43\n",
-       "6499    11015.3\n",
-       "6505    4613.87\n",
-       "6506       2613\n",
-       "Name: Payment Amount, dtype: object"
-      ]
-     },
-     "execution_count": 314,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "DEA_payments.filter(regex = '[0-9]')"
    ]
   },
   {
